--- a/force/force.css
+++ b/force/force.css
@@ -1,12 +1,11 @@
 .nodes circle {
     cursor: pointer;
-    fill: #ff3399;
     stroke: #000;
-    stroke-width: .5px;
+    stroke-width: 2px;
 }
 
 .links line {
     fill: none;
     stroke: #9ecae1;
-    stroke-width: .5px;
+    stroke-width: 1px;
 }
